2002-09-30  Jody Goldberg <jody@gnome.org>

	* Release 1.1.9

2002-09-22  Jon K Hellan  <hellan@acm.org>

	* functions.c (help_imarcsec, help_imarccsc, help_imarccot,
	help_imarccot, help_imarccsch, help_imarccoth): Fix typos in help
	xrefs.
	

2002-08-30  Morten Welinder  <terra@diku.dk>

	* functions.c (value_new_complex): Avoid copying string.

2002-08-25  Jody Goldberg <jody@gnome.org>

	* Release 1.1.8

2002-08-16  Jon K Hellan  <hellan@acm.org>

	* gsl-complex.c: Include gsl-complex.h.

2002-08-12  Jody Goldberg <jody@gnome.org>

	* Release 1.1.7

2002-08-06  Morten Welinder  <terra@diku.dk>

	* functions.c (plugin_cleanup, plugin_init): Remove these null
	functions.

2002-07-22  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml.in: Set loader type to "Gnumeric_Builtin:module".

2002-07-27  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Function description clean up.

2002-07-21  Jody Goldberg <jody@gnome.org>

	* Release 1.1.6

2002-07-20  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c: Implemented IMINV(), IMSEC(), IMCSC(), IMCOT(),
	and IMNEG().

2002-07-11  Morten Welinder  <terra@diku.dk>

	* gsl-complex.c (gsl_complex_abs): Remove.  (Did the exact same
	thing as complex_mod.)
	: Constify and make gnum_float safe.

2002-07-07  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* functions.c, gsl-complex.c: Implemented the following fns:
	  IMARCSIN(), IMARCCOS(), IMARCTAN(), IMARCSEC(), IMARCCSC(),
	  IMARCCOT(), IMSINH(), IMCOSH(), IMTANH(), IMSECH(), IMCSCH(),
	  IMCOTH(), IMARCSINH(), IMARCCOSH(), IMARCTANH(), IMARCSECH(),
	  IMARCCSCH(), and IMARCCOTH().

	* functions.c: Imported the complex functions from the fn-eng
	plug-in.

	* gsl-complex.[ch]: Imported with modifications from the GNU
	Scientific Library (GPLed stuff).