@@ -1478,88 +1478,131 @@ gnumeric_imsum (FunctionEvalInfo *ei, GnmExprList *expr_node_list)
 
 GnmFuncDescriptor const complex_functions[] = {
         { "complex",     "ff|s", "real,im[,suffix]", &help_complex,
-	  gnumeric_complex, NULL, NULL, NULL },
-        { "imabs",       "?",    "inumber", &help_imabs,
-	  gnumeric_imabs, NULL, NULL, NULL },
-        { "imaginary",   "?",    "inumber", &help_imaginary,
-	  gnumeric_imaginary, NULL, NULL, NULL },
-        { "imargument",  "?",    "inumber", &help_imargument,
-	  gnumeric_imargument, NULL, NULL, NULL },
-        { "imconjugate", "?",    "inumber", &help_imconjugate,
-	  gnumeric_imconjugate, NULL, NULL, NULL },
-        { "iminv",   "?",    "inumber", &help_iminv,
-	  gnumeric_iminv, NULL, NULL, NULL },
-        { "imneg",   "?",    "inumber", &help_imneg,
-	  gnumeric_imneg, NULL, NULL, NULL },
-        { "imcos",       "?",    "inumber", &help_imcos,
-	  gnumeric_imcos, NULL, NULL, NULL },
-        { "imtan",       "?",    "inumber", &help_imtan,
-	  gnumeric_imtan, NULL, NULL, NULL },
-        { "imdiv",       "??",   "inumber,inumber", &help_imdiv,
-	  gnumeric_imdiv, NULL, NULL, NULL },
-        { "imexp",       "?",    "inumber", &help_imexp,
-	  gnumeric_imexp, NULL, NULL, NULL },
-        { "imln",        "?",    "inumber", &help_imln,
-	  gnumeric_imln, NULL, NULL, NULL },
-        { "imlog10",     "?",    "inumber", &help_imlog10,
-	  gnumeric_imlog10, NULL, NULL, NULL },
-        { "imlog2",      "?",    "inumber", &help_imlog2,
-	  gnumeric_imlog2, NULL, NULL, NULL },
-        { "impower",     "??",   "inumber,inumber", &help_impower,
-	  gnumeric_impower, NULL, NULL, NULL },
-        { "improduct",   NULL,   "inumber,inumber", &help_improduct,
-	  NULL, gnumeric_improduct, NULL, NULL },
-        { "imreal",      "?",    "inumber", &help_imreal,
-	  gnumeric_imreal, NULL, NULL, NULL },
-        { "imsin",       "?",    "inumber", &help_imsin,
-	  gnumeric_imsin, NULL, NULL, NULL },
-        { "imsec",       "?",    "inumber", &help_imsec,
-	  gnumeric_imsec, NULL, NULL, NULL },
-        { "imcsc",       "?",    "inumber", &help_imcsc,
-	  gnumeric_imcsc, NULL, NULL, NULL },
-        { "imcot",       "?",    "inumber", &help_imcot,
-	  gnumeric_imcot, NULL, NULL, NULL },
-        { "imsqrt",      "?",    "inumber", &help_imsqrt,
-	  gnumeric_imsqrt, NULL, NULL, NULL },
-        { "imsub",       "??",   "inumber,inumber", &help_imsub,
-	  gnumeric_imsub, NULL, NULL, NULL },
+	  gnumeric_complex, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imabs",       "S",    "inumber", &help_imabs,
+	  gnumeric_imabs, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imaginary",   "S",    "inumber", &help_imaginary,
+	  gnumeric_imaginary, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imargument",  "S",    "inumber", &help_imargument,
+	  gnumeric_imargument, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imconjugate", "S",    "inumber", &help_imconjugate,
+	  gnumeric_imconjugate, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imcos",       "S",    "inumber", &help_imcos,
+	  gnumeric_imcos, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imdiv",       "SS",   "inumber,inumber", &help_imdiv,
+	  gnumeric_imdiv, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imexp",       "S",    "inumber", &help_imexp,
+	  gnumeric_imexp, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imln",        "S",    "inumber", &help_imln,
+	  gnumeric_imln, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imlog10",     "S",    "inumber", &help_imlog10,
+	  gnumeric_imlog10, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imlog2",      "S",    "inumber", &help_imlog2,
+	  gnumeric_imlog2, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "impower",     "SS",   "inumber,inumber", &help_impower,
+	  gnumeric_impower, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imreal",      "S",    "inumber", &help_imreal,
+	  gnumeric_imreal, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imsin",       "S",    "inumber", &help_imsin,
+	  gnumeric_imsin, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imsqrt",      "S",    "inumber", &help_imsqrt,
+	  gnumeric_imsqrt, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imsub",       "SS",   "inumber,inumber", &help_imsub,
+	  gnumeric_imsub, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
         { "imsum",       NULL,   "inumber,inumber", &help_imsum,
-	  NULL, gnumeric_imsum, NULL, NULL },
-        { "imsinh",       "?",   "inumber", &help_imsinh,
-	  gnumeric_imsinh, NULL, NULL, NULL },
-        { "imcosh",       "?",   "inumber", &help_imcosh,
-	  gnumeric_imcosh, NULL, NULL, NULL },
-        { "imtanh",       "?",   "inumber", &help_imtanh,
-	  gnumeric_imtanh, NULL, NULL, NULL },
-        { "imsech",       "?",   "inumber", &help_imsech,
-	  gnumeric_imsech, NULL, NULL, NULL },
-        { "imcsch",       "?",   "inumber", &help_imcsch,
-	  gnumeric_imcsch, NULL, NULL, NULL },
-        { "imcoth",       "?",   "inumber", &help_imcoth,
-	  gnumeric_imcoth, NULL, NULL, NULL },
-        { "imarcsin",     "?",   "inumber", &help_imarcsin,
-	  gnumeric_imarcsin, NULL, NULL, NULL },
-        { "imarccos",     "?",   "inumber", &help_imarccos,
-	  gnumeric_imarccos, NULL, NULL, NULL },
-        { "imarctan",     "?",   "inumber", &help_imarctan,
-	  gnumeric_imarctan, NULL, NULL, NULL },
-        { "imarcsec",     "?",   "inumber", &help_imarcsec,
-	  gnumeric_imarcsec, NULL, NULL, NULL },
-        { "imarccsc",     "?",   "inumber", &help_imarccsc,
-	  gnumeric_imarccsc, NULL, NULL, NULL },
-        { "imarccot",     "?",   "inumber", &help_imarccot,
-	  gnumeric_imarccot, NULL, NULL, NULL },
-        { "imarcsinh",    "?",   "inumber", &help_imarcsinh,
-	  gnumeric_imarcsinh, NULL, NULL, NULL },
-        { "imarccosh",    "?",   "inumber", &help_imarccosh,
-	  gnumeric_imarccosh, NULL, NULL, NULL },
-        { "imarctanh",    "?",   "inumber", &help_imarctanh,
-	  gnumeric_imarctanh, NULL, NULL, NULL },
-        { "imarcsech",    "?",   "inumber", &help_imarcsech,
-	  gnumeric_imarcsech, NULL, NULL, NULL },
-        { "imarccsch",    "?",   "inumber", &help_imarccsch,
-	  gnumeric_imarccsch, NULL, NULL, NULL },
-        { "imarccoth",    "?",   "inumber", &help_imarccoth,
-	  gnumeric_imarccoth, NULL, NULL, NULL },
+	  NULL, gnumeric_imsum, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+
+        { "iminv",   "S",    "inumber", &help_iminv,
+	  gnumeric_iminv, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_NOT_IN_EXCEL, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imneg",   "S",    "inumber", &help_imneg,
+	  gnumeric_imneg, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imtan",       "S",    "inumber", &help_imtan,
+	  gnumeric_imtan, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "improduct",   NULL,   "inumber,inumber", &help_improduct,
+	  NULL, gnumeric_improduct, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imsec",       "S",    "inumber", &help_imsec,
+	  gnumeric_imsec, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imcsc",       "S",    "inumber", &help_imcsc,
+	  gnumeric_imcsc, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imcot",       "S",    "inumber", &help_imcot,
+	  gnumeric_imcot, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imsinh",       "S",   "inumber", &help_imsinh,
+	  gnumeric_imsinh, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imcosh",       "S",   "inumber", &help_imcosh,
+	  gnumeric_imcosh, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imtanh",       "S",   "inumber", &help_imtanh,
+	  gnumeric_imtanh, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imsech",       "S",   "inumber", &help_imsech,
+	  gnumeric_imsech, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imcsch",       "S",   "inumber", &help_imcsch,
+	  gnumeric_imcsch, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imcoth",       "S",   "inumber", &help_imcoth,
+	  gnumeric_imcoth, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarcsin",     "S",   "inumber", &help_imarcsin,
+	  gnumeric_imarcsin, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarccos",     "S",   "inumber", &help_imarccos,
+	  gnumeric_imarccos, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarctan",     "S",   "inumber", &help_imarctan,
+	  gnumeric_imarctan, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarcsec",     "S",   "inumber", &help_imarcsec,
+	  gnumeric_imarcsec, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarccsc",     "S",   "inumber", &help_imarccsc,
+	  gnumeric_imarccsc, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarccot",     "S",   "inumber", &help_imarccot,
+	  gnumeric_imarccot, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarcsinh",    "S",   "inumber", &help_imarcsinh,
+	  gnumeric_imarcsinh, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarccosh",    "S",   "inumber", &help_imarccosh,
+	  gnumeric_imarccosh, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarctanh",    "S",   "inumber", &help_imarctanh,
+	  gnumeric_imarctanh, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarcsech",    "S",   "inumber", &help_imarcsech,
+	  gnumeric_imarcsech, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarccsch",    "S",   "inumber", &help_imarccsch,
+	  gnumeric_imarccsch, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
+        { "imarccoth",    "S",   "inumber", &help_imarccoth,
+	  gnumeric_imarccoth, NULL, NULL, NULL,
+	  GNM_FUNC_SIMPLE, GNM_FUNC_IMPL_STATUS_COMPLETE, GNM_FUNC_TEST_STATUS_BASIC },
         {NULL}
 };
