@@ -1,3 +1,9 @@
+2002-10-14  Jody Goldberg <jody@gnome.org>
+
+	* functions.c : convert all args to 'S' rather than '?' to get the
+	  power of implicit iteration and error checking.
+	  Added status info.
+
 2002-09-30  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.9
